# Chatbot

./: .gitignore  pyproject.toml
chatbot/: main.py  test_main.py
chatbot/models/: chat.py
chatbot/services/: chat.py  search.py
