[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = ""
authors = ["Dylan H <205616944+Dylan4273@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.12"}
langchain-openai = "^0.3.12"
python-dotenv = "^1.1.0"
pytest = "^8.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
